--- a/client/src/pages/ArticlePage/ArticlePage.css
+++ b/client/src/pages/ArticlePage/ArticlePage.css
@@ -2,7 +2,7 @@
   max-width: 50%;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-  margin: 1rem 0;
+  margin: 1rem 0 0 0;
   padding: 2rem;
 }
 
