--- a/client/src/components/RecipeListItem/RecipeListItem.css
+++ b/client/src/components/RecipeListItem/RecipeListItem.css
@@ -1,4 +1,4 @@
-.recipe-list-item {
+/* .recipe-list-item {
   max-height: 40rem;
   max-width: 40rem;
 
@@ -45,4 +45,4 @@
 .recipe-list-item-title:active {
   text-decoration: underline;
 }
-
+ */
