--- a/client/src/pages/DisclaimerPage/DisclaimerPage.css
+++ b/client/src/pages/DisclaimerPage/DisclaimerPage.css
@@ -1,4 +1,4 @@
-.disclaimer-container {
+/* .disclaimer-container {
   padding: 2rem;
   max-width: 800px;
   margin: 0 auto;
@@ -50,4 +50,4 @@
 
 .dark-theme .warning {
   background: rgba(255, 71, 87, 0.2);
-}
+} */
