--- a/client/src/pages/TermsPage/TermsPage.css
+++ b/client/src/pages/TermsPage/TermsPage.css
@@ -1,4 +1,4 @@
-.terms-container {
+/* .terms-container {
   padding: 2rem;
   max-width: 800px;
   margin: 0 auto;
@@ -77,4 +77,4 @@
   color: var(--description-color);
   border-top: 1px dashed var(--border-separator-color);
   padding-top: 1rem;
-}
+} */
