--- a/client/src/components/GamesList/GamesList.css
+++ b/client/src/components/GamesList/GamesList.css
@@ -1,4 +1,4 @@
-.games-list-section {
+/* .games-list-section {
     margin: 0;
     padding: 0;
     display: flex;
@@ -49,4 +49,4 @@
     .games-list-title {
         font-size: 1.8rem;
     }
-}
+} */
