--- a/client/src/pages/ContactPage/ContactPage.css
+++ b/client/src/pages/ContactPage/ContactPage.css
@@ -1,4 +1,4 @@
-.contact-container {
+/* .contact-container {
   padding: 2rem;
   max-width: 800px;
   margin: 0 auto;
@@ -94,4 +94,4 @@
 .psychic small {
   color: #ff4757;
   font-weight: bold;
-}
+} */
