--- a/client/src/pages/RecipePage/RecipePage.css
+++ b/client/src/pages/RecipePage/RecipePage.css
@@ -1,4 +1,4 @@
-.recipe-article {
+/* .recipe-article {
   max-width: 800px;
   margin: 0 auto;
   padding: 2rem;
@@ -59,4 +59,4 @@
   width: 100%;
   border-radius: 8px;
 }
-
+ */
