--- a/client/src/pages/WriterPage/WriterPage.css
+++ b/client/src/pages/WriterPage/WriterPage.css
@@ -1,4 +1,4 @@
-.writer-profile-section {
+/* .writer-profile-section {
     text-align: center;
     margin-bottom: 10rem;
 }
@@ -29,4 +29,4 @@
 
 .writer-page-profile-img .image-content {
     border-radius: 50%;
-}
+} */
